<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default_value" translatable="false">94043</string>
    <string name="pref_temperature_units_key" translatable="false">units</string>
    <string name="pref_temperature_units_title">Temperature Units</string>
    <string name="pref_temperature_units_default" translatable="false">metric</string>
    <string name="pref_temperature_units_imperial" translatable="false">imperial</string>
    <string name="action_map">Check on Map</string>
    <string name="action_share">Share</string>
    <string name="pref_last_sync_operation" translatable="false">lastSync</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_server_invalid_location">No weather information available. The selected location does not exist.</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <string name="no_info_available">No weather information available.</string>
    <string name="no_internet_connection">No weather information available. You are offline right now!</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date" translatable="false"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <!-- Temperature format for displaying the degree symbol -->
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="wind">Wind </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <string name="pressure">Pressure </string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="humidity">Humidity </string>
    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">sunshine.example.com</string>
    <string name="content_authority" translatable="false">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather forecast notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <string name="date_format">EEE, MMM dd</string>

    <string name="clear">Clear</string>
    <string name="clouds">Clouds</string>
    <string name="rain">Rain</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <string name="pref_art_pack_title">Icon Pack</string>
    <string name="pref_art_pack_key">icon_pack</string>

    <string name="pref_art_pack_label_sunshine">Sunshine</string>
    <string name="pref_art_pack_label_mono">Monochrome</string>

    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="pref_art_pack_mono" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_%s.png</string>

    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>

    <string-array name="temperature_units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="temperature_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- Names of the art packs available -->
    <string-array name="pref_art_pack_options">
        <item>@string/pref_art_pack_label_sunshine</item>
        <item>@string/pref_art_pack_label_mono</item>
    </string-array>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string-array name="pref_art_pack_values">
        <item>@string/pref_art_pack_sunshine</item>
        <item>@string/pref_art_pack_mono</item>
    </string-array>

</resources>
