<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:id="@+id/pref_location"
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:title="@string/pref_temperature_units_title"
        android:entries="@array/temperature_units"
        android:entryValues="@array/temperature_units_values"
        android:dialogTitle="@string/pref_temperature_units_title"
        android:defaultValue="@string/pref_temperature_units_default" />

    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:title="@string/pref_enable_notifications_label" />

</PreferenceScreen>