<?xml version="1.0" encoding="utf-8"?><!-- Master layout. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <include
                layout="@layout/detail_today_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/detail_additional_pane"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/detail_accent_pane_background"
            android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
            app:columnCount="2">

            <android.support.v7.widget.Space
                app:layout_columnSpan="2"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_humidity_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:text="@string/humidity"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_humidity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                tools:text="38%" />

            <TextView
                android:id="@+id/detail_pressure_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:text="@string/pressure"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_pressure_textview"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                tools:text="995 hPa" />

            <TextView
                android:id="@+id/detail_wind_label_textview"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
                android:paddingRight="@dimen/forecast_detail_horizontal_padding"
                android:text="@string/wind"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_wind_textview"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                tools:text="4km/h NW" />

            <android.support.v7.widget.Space
                app:layout_columnSpan="2"
                app:layout_rowWeight="1" />

        </android.support.v7.widget.GridLayout>
    </LinearLayout>
</FrameLayout>